--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -442,6 +442,18 @@ $form-check-line-height: $line-height-heading;
 $form-check-margin-bottom: -0.1em;
 ```
 
+### Switch
+
+```scss
+$form-switch-border-width: 1px;
+$form-switch-font-size: 1.125rem;
+$form-switch-font-size-sm: $font-size-base;
+$form-switch-font-size-lg: $font-size-lg;
+$form-switch-font-weight: $form-label-font-weight;
+$form-switch-line-height: $line-height-heading;
+$form-switch-margin-bottom: $form-check-margin-bottom;
+```
+
 ### Select
 
 ```scss
