--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -430,6 +430,22 @@ $form-control-textarea-height: 6rem;
 
 ```
 
+### File
+
+```scss
+$form-file-background: primary;
+```
+
+### Range
+
+```scss
+$form-range-track-height: 0.25rem;
+$form-range-track-broder-radius: 0.15rem;
+$form-range-thumb-height: 1rem;
+$form-range-thumb-width: 1rem;
+$form-range-thumb-broder-radius: 0.25rem;
+```
+
 ### Check
 
 ```scss
