--- a/src/docs/elements/generators.mdx
+++ b/src/docs/elements/generators.mdx
@@ -73,6 +73,7 @@ To generate the form related styles (everything under the form folder), use `gen
 @include spruce.generate-form;
 ```
 - [generate-btn](https://github.com/conedevelopment/sprucecss/blob/main/scss/form/_button.scss)
+- [generate-file-btn](https://github.com/conedevelopment/sprucecss/blob/main/scss/form/_file.scss)
 - [generate-form-check](https://github.com/conedevelopment/sprucecss/blob/main/scss/form/_check.scss)
 - [generate-form-control](https://github.com/conedevelopment/sprucecss/blob/main/scss/form/_control.scss)
 - [generate-form-description](https://github.com/conedevelopment/sprucecss/blob/main/scss/form/_description.scss)
