Add missing !default

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -538,3 +538,10 @@ $breakpoints: (
   xxl: 110em
 );
 ```
+
+## Print
+
+```scss
+$print-page-margin: 2cm !default;
+$print-hidden-elements: 'header, footer, aside, nav, form, iframe, [class^="aspect-ratio"]';
+```
