--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -27,89 +27,86 @@ The following values are the ones that we use for this site’s dark mode.
 ```scss
 @use 'sass:color';
 
-$dark-color-primary: hsl(261 54% 70%);
-$dark-color-secondary: hsl(227 92% 55%);
+$color-primary: hsl(261 54% 70%);
+$color-secondary: hsl(227 92% 55%);
 
-$dark-color-black: hsl(206 88% 6%);
-$dark-color-white: hsl(0 0% 95%);
+$color-black: hsl(206 100% 7%);
+$color-white: hsl(0 0% 95%);
 
-$dark-color-gray: hsl(0 0% 97%);
-$dark-color-gray-dark: hsl(0 0% 100% / 8%);
+$color-gray: hsl(0 0% 97%);
+$color-gray-dark: hsl(0 0% 100% / 8%);
 
-$dark-color-danger: hsl(0 71% 51%);
-$dark-color-success: hsl(150 100% 33%);
+$color-danger: hsl(0 71% 51%);
+$color-success: hsl(150 100% 33%);
 
-@use '~sprucecss/scss/spruce' with (
-  $dark-colors: (
-    base: (
-      primary: $dark-color-primary,
-      secondary: $dark-color-secondary,
-      background: $dark-color-black,
-      heading: $dark-color-white,
-      text: $dark-color-gray,
-      link: $dark-color-primary,
-      link-hover: color.scale($dark-color-primary, $lightness: -20%),
-      border: $dark-color-gray-dark,
-      mark-background: hsl(50 100% 80%),
-      mark-foreground: $dark-color-black,
-      code-background: hsl(207deg 64% 21%),
-      code-foreground: $dark-color-white,
-      blockquote-border: $dark-color-primary
-    ),
-    selection: (
-      foreground: $dark-color-white,
-      background: $dark-color-primary
-    ),
-    alert: (
-      danger: $dark-color-danger,
-      info: hsl(195 100% 42%),
-      success: $dark-color-success,
-      warning: hsl(48 89% 55%)
-    ),
-    btn: (
-      primary-background: hsl(261 52% 59%),
-      primary-foreground: $dark-color-white,
-      primary-shadow-focus: color.adjust(hsl(261 52% 59%), $alpha: -0.75),
-      secondary-background: $dark-color-secondary,
-      secondary-foreground: $dark-color-white,
-      secondary-shadow-focus: color.adjust($dark-color-secondary, $alpha: -0.75),
-      install-background: hsl(207, 39%, 17%),
-      install-background-hover: hsl(207, 23%, 26%),
-      install-foreground: hsl(0, 0%, 100%),
-      install-foreground-hover: hsl(0, 0%, 100%),
-    ),
-    form: (
-      background: color.scale($dark-color-black, $lightness: 5%),
-      background-disabled: $dark-color-black,
-      border: $dark-color-gray-dark,
-      border-disabled: $dark-color-gray-dark,
-      border-focus: $dark-color-primary,
-      shadow-focus: color.adjust($dark-color-primary, $alpha: -0.75),
-      check-foreground: $dark-color-black,
-      check-background: $dark-color-primary,
-      invalid: $dark-color-danger,
-      invalid-shadow: color.adjust($dark-color-danger, $alpha: -0.75),
-      label: $dark-color-white,
-      legend: $dark-color-white,
-      placeholder: hsl(0 0% 60%),
-      text: $dark-color-gray,
-      select-foreground: $dark-color-primary,
-      valid: $dark-color-success,
-      valid-shadow: color.adjust($dark-color-success, $alpha: -0.75)
-    ),
-    table: (
-      border: $dark-color-gray-dark,
-      caption: $dark-color-gray,
-      heading: $dark-color-white,
-      hover: hsl(0 0% 0% / 0.05),
-      text: $dark-color-gray,
-      stripe: hsl(0 0% 0% / 0.025)
-    ),
-    scrollbar: (
-      thumb-background: hsla(0, 0%, 100%, 0.15),
-      thumb-background-hover: hsla(0, 0%, 100%, 0.25),
-      track-background:	hsla(0, 0%, 100%, 0.05)
-    )
+$colors: (
+  base: (
+    card-border: hsl(207 90% 13%),
+    primary: $color-primary,
+    secondary: $color-secondary,
+    background: $color-black,
+    heading: $color-white,
+    text: $color-gray,
+    link: $color-primary,
+    link-hover: color.scale($color-primary, $lightness: -20%),
+    border: $color-gray-dark,
+    mark-background: hsl(50 100% 80%),
+    mark-foreground: $color-black,
+    code-background: hsl(207 64% 21%),
+    code-foreground: $color-white,
+    blockquote-border: $color-primary,
+    footer-background: hsl(0 0% 0% / 0.15)
+  ),
+  selection: (
+    foreground: $color-white,
+    background: $color-primary
+  ),
+  btn: (
+    primary-background: hsl(261 52% 59%),
+    primary-foreground: $color-white,
+    primary-shadow-focus: color.adjust(hsl(261 52% 59%), $alpha: -0.75),
+    secondary-background: $color-secondary,
+    secondary-foreground: $color-white,
+    secondary-shadow-focus: color.adjust($color-secondary, $alpha: -0.75),
+    install-background: hsl(207 39% 17%),
+    install-background-hover: hsl(207 23% 26%),
+    install-foreground: hsl(0 0% 100%),
+    install-foreground-hover: hsl(0 0% 100%),
+  ),
+  form: (
+    background: color.scale($color-black, $lightness: 5%),
+    background-disabled: $color-black,
+    border: $color-gray-dark,
+    border-disabled: $color-gray-dark,
+    border-focus: $color-primary,
+    shadow-focus: color.adjust($color-primary, $alpha: -0.75),
+    check-foreground: $color-black,
+    check-background: $color-primary,
+    invalid: $color-danger,
+    invalid-shadow: color.adjust($color-danger, $alpha: -0.75),
+    label: $color-white,
+    legend: $color-white,
+    placeholder: hsl(0 0% 60%),
+    range-thumb-background: $color-primary,
+    range-thumb-shadow: color.adjust($color-primary, $alpha: -0.75),
+    range-track-background: color.scale($color-black, $lightness: 10%),
+    text: $color-gray,
+    select-foreground: hsl(0 0% 100%),
+    valid: $color-success,
+    valid-shadow: color.adjust($color-success, $alpha: -0.75)
+  ),
+  table: (
+    border: $color-gray-dark,
+    caption: $color-gray,
+    heading: $color-white,
+    hover: hsl(0 0% 100% / 0.05),
+    text: $color-gray,
+    stripe: hsl(0 0% 100% / 0.025)
+  ),
+  scrollbar: (
+    thumb-background: hsl(0 0% 100% / 0.15),
+    thumb-background-hover:	hsl(0 0% 100% / 0.25),
+    track-background:	hsl(0 0% 100% / 0.05)
   )
 );
 ```
@@ -139,8 +136,8 @@ For example, we want to set the `color-scheme` to `dark` to discolor the scrollb
 
   select.form-control:not([multiple]):not([size]) {
     @include spruce.field-icon(
-      spruce.$select-image,
-      spruce.color(primary, $only-color: true)
+      spruce.$select-icon,
+      spruce.color(select-foreground, form, true, spruce.$dark-colors)
     );
   }
 }
