Add js folder to tree view

--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -48,6 +48,8 @@ sprucecss/
 ├─ css/               // Compiled CSS folder
 │  ├─ spruce.css
 │  ├─ spruce.min.css
+├─ js/
+|  |- cookie.js
 ├─ preview/           // Spruce preview for development
 │  ├─ ...
 ├─ scss/              // Source .scss files, Spruce CSS itself
