--- a/src/docs/getting-started/js.mdx
+++ b/src/docs/getting-started/js.mdx
@@ -4,21 +4,99 @@ order: 8
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/js.mdx'
 ---
 
-<p class="lead">Spruce has some print-related styles. Nothing severe or fancy, but a set of minimal styles.</p>
+<p class="lead">Spruce comes with a few JS utilities needed for the UI components or in generic development.</p>
 
-You can turn on basic print styles from the `$settings` map; set the `print` to `true` to turn it on.
+The scripts utilize [JS modules](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules), so you have to use import to use them.
 
-```scss
-@use '~sprucecss/scss/spruce' with (
-  $settings: (
-    print: true
-  )
-);
+The scripts utilize JS modules, so you have to use import to use them. One thing that is good to know here is that you need to specify the `type="module"` attribute and value for native browser support with import.
+
+```html
+<script type="module" src="your-script-with-import.js">
 ```
 
-[Print-related variables](/docs/sass/variables#print).
+## Cookie
 
-**You get the following with the print styles:**
-- with the `$print-page-margin` variable (default value: 2cm), you can control the margin of the page.
-- With the `$print-hidden-elements`, you can hide elements from print view.
-- You get the URLs of the links after `<a>` elements.
+A small utility to manage cookies from the client side (which is not straightforward in JS but sometimes needed).
+
+### setCookie
+
+Set a cookie name-value pair with additional options.
+
+#### Parameter(s)
+
+| Name       | Default Value | Description                                                                                   |
+|------------|---------------|---------------------------------------|
+| `key`      |               | The name of the cookie.               |
+| `value`    |               | The value of the cookie.              |
+| `expires`  | `null`        | Cookie expiration date in days.       |
+| `path`     | `/`           | The URL path where the cookie exists. |
+| `options`  | `{}}`         | Any additional name and value pair.   |
+
+Any cookie which you set gets two default settings:
+
+- `SameSite: 'Lax'`,
+- `Secure: true`.
+
+If you want to overwrite any of them, use the last, `options` parameter.
+
+#### Example(s)
+
+```js
+import {setCookie} from '~sprucecss/js/cookie.js';
+
+setCookie('spruce-test', true, 10, '/');
+```
+
+### getCookie
+
+Get a cookie value by name.
+
+#### Parameter(s)
+
+| Name       | Description                           |
+|------------|---------------------------------------|
+| `key`      | The name of the cookie.               |
+
+#### Example(s)
+
+```js
+import {getCookie} from '~sprucecss/js/cookie.js';
+
+getCookie('spruce-test');
+```
+
+### issetCookie
+
+Check if a cookie exist by name.
+
+#### Parameter(s)
+
+| Name       | Description                           |
+|------------|---------------------------------------|
+| `key`      | The name of the cookie.               |
+
+#### Example(s)
+
+```js
+import {issetCookie} from '~sprucecss/js/cookie.js';
+
+issetCookie('spruce-test');
+```
+
+### removeCookie
+
+Remove a cookie by name.
+
+#### Parameter(s)
+
+| Name       | Description                           |
+|------------|---------------------------------------|
+| `key`      | The name of the cookie.               |
+
+#### Example(s)
+
+```js
+import {removeCookie} from '~sprucecss/js/cookie.js';
+
+removeCookie('spruce-test');
+```
