Update text-ellipsis: add notification

--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -400,6 +400,8 @@ Crop text and display an ellipsis with multiline support where possible.
 }
 ```
 
+<Notification type="info">Be careful when using the <code>text-ellipsis</code> mixin with flex displays because it will break.</Notification>
+
 ### visually-hidden
 
 Hide something from the screen but keep it visible for assistive technology.
