Add test iframe

--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -142,3 +142,5 @@ For example, we want to set the `color-scheme` to `dark` to discolor the scrollb
   }
 }
 ```
+
+<iframe src="https://ui.sprucecss.com/html/component/post-card-preview.html" frameborder="0" title="Post Card" loading="lazy" style="height: 34rem;"></iframe>
