Experimenting with table at variables

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -325,6 +325,37 @@ $heading-font-weight: 700;
 
 ### Line Height
 
+<table class="table table--striped">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Value</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>$line-height-sm</td>
+      <td>1.2</td>
+    </tr>
+    <tr>
+      <td>$line-height-md</td>
+      <td>1.5</td>
+    </tr>
+    <tr>
+      <td>$line-height-lg</td>
+      <td>1.8</td>
+    </tr>
+    <tr>
+      <td>$line-height-base</td>
+      <td>$line-height-lg</td>
+    </tr>
+    <tr>
+      <td>$line-height-heading</td>
+      <td>calc(2px + 2ex + 2px)</td>
+    </tr>
+  </tbody>
+</table>
+
 ```scss
 $line-height-sm: 1.2;
 $line-height-md: 1.5;
