--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -584,7 +584,32 @@ $breakpoints: (
 
 ## Print
 
+To learn more about the print option, [please visit the related page](/docs/getting-started/print/).
+
+[View on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/config/_print.scss)
+
+<table class="table table--striped table--clear-border table--sm">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Value</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>$print-page-margin</td>
+      <td>2cm</td>
+    </tr>
+    <tr>
+      <td>$print-hidden-elements</td>
+      <td>'header, footer, aside, nav, form, iframe, [class^="aspect-ratio"]'</td>
+    </tr>
+  </tbody>
+</table>
+
 ```scss
-$print-page-margin: 2cm !default;
-$print-hidden-elements: 'header, footer, aside, nav, form, iframe, [class^="aspect-ratio"]';
+@use '~sprucecss/scss/spruce' with (
+  $print-page-margin: 2cm,
+  $print-hidden-elements: 'header, footer, aside, nav, form, iframe, [class^="aspect-ratio"]'
+);
 ```
